--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,13 +23,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgT-N8-sqa">
-                    <rect key="frame" x="0.0" y="20" width="0.0" height="0.0"/>
+                    <rect key="frame" x="0.0" y="54" width="0.0" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码或手机验证码" textAlignment="natural" minimumFontSize="14" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl" customClass="CNBaseTF">
-                    <rect key="frame" x="0.0" y="48" width="276" height="30"/>
+                    <rect key="frame" x="0.0" y="59" width="276" height="19"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
@@ -37,8 +37,15 @@
                         <outlet property="delegate" destination="-1" id="kAY-jw-DJs"/>
                     </connections>
                 </textField>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eh6-IX-fEv">
+                    <rect key="frame" x="183" y="78" width="10" height="10"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="10" id="X0n-Sg-aep"/>
+                    </constraints>
+                </view>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-wj-JDq">
-                    <rect key="frame" x="273" y="48" width="88" height="30"/>
+                    <rect key="frame" x="273" y="53.5" width="88" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="88" id="XIK-Mj-6In"/>
                     </constraints>
@@ -51,7 +58,7 @@
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzN-sK-jsu">
-                    <rect key="frame" x="346" y="48" width="30" height="30"/>
+                    <rect key="frame" x="346" y="53.5" width="30" height="30"/>
                     <state key="normal" image="l_password_s"/>
                     <state key="selected" image="l_password"/>
                     <connections>
@@ -68,18 +75,20 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="eh6-IX-fEv" secondAttribute="bottom" id="2T0-56-ebT"/>
                 <constraint firstItem="zNf-wj-JDq" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="4ZO-41-Z1U"/>
                 <constraint firstAttribute="trailing" secondItem="zNf-wj-JDq" secondAttribute="trailing" constant="15" id="6wB-xG-Gce"/>
                 <constraint firstItem="lgT-N8-sqa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ani-bP-Ewx"/>
-                <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="zNf-wj-JDq" secondAttribute="bottom" constant="10" id="DSn-Gm-DgF"/>
                 <constraint firstAttribute="bottom" secondItem="cfA-lO-mIA" secondAttribute="bottom" id="FZe-Wb-KzL"/>
                 <constraint firstAttribute="trailing" secondItem="ZI9-1o-5Rl" secondAttribute="trailing" constant="100" id="G8Q-3d-2DO"/>
+                <constraint firstItem="eh6-IX-fEv" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.11236" id="H7I-y0-OVM"/>
                 <constraint firstAttribute="trailing" secondItem="cfA-lO-mIA" secondAttribute="trailing" id="JrN-y6-K03"/>
+                <constraint firstItem="ZI9-1o-5Rl" firstAttribute="bottom" secondItem="eh6-IX-fEv" secondAttribute="top" id="KXe-ha-6Pe"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="PUW-J7-95K"/>
                 <constraint firstItem="ZzN-sK-jsu" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="Z6Q-kZ-6W0"/>
-                <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="ZI9-1o-5Rl" secondAttribute="bottom" constant="10" id="bg9-iv-iOv"/>
+                <constraint firstItem="lgT-N8-sqa" firstAttribute="bottom" secondItem="ZI9-1o-5Rl" secondAttribute="top" constant="-5" id="ZTK-mC-Uhj"/>
+                <constraint firstItem="eh6-IX-fEv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="e2r-QO-AS6"/>
                 <constraint firstAttribute="trailing" secondItem="ZzN-sK-jsu" secondAttribute="trailing" id="leF-9U-HTH"/>
-                <constraint firstItem="lgT-N8-sqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="mGc-uV-Jo3"/>
                 <constraint firstItem="ZI9-1o-5Rl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="voB-f1-Kvo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
